tests/valid/ListGenerator_Valid_3.whiley
string f([int] x):
     return str(|x|)

void main([string] args):
     arr = []
     out->println(f(arr))
