tests/invalid/DefiniteAssign_CompileFail_4.whiley
void f(string a):
    print a

void main([string] args):
    print "HELLO"
    x->f("WORLD")
